--- a/configs/config_default.yml
+++ b/configs/config_default.yml
@@ -1,4 +1,4 @@
-Critic_table:
+Critic:
   #Learning rate -
   learning_rate: 0.9
 
@@ -25,7 +25,6 @@ Actor:
   epsilon_decay: 0.99999
 
 Environment:
-
   #Boardsize
   boardsize: 5
 
@@ -33,7 +32,7 @@ Environment:
   board_type: "Triangle"
 
   #Open cells
-  open_cells: [!!python/tuple [2,1]]
+  open_cells: [!!python/tuple [2, 1]]
 
   #Track history
   track_history: True
