--- a/configs/4_diamond_table.yml
+++ b/configs/4_diamond_table.yml
@@ -6,7 +6,7 @@ Critic:
   discount_factor: 0.9
 
   #Eligibility decay
-  eli_decay: 0.1
+  eli_decay: 0.85
 
   #Dims (Will be ignored for TableCritic)
   # NOTE: dims[0] MUST equal size**2 if Diamondboard or size(size+1)/2 if Triangle
@@ -14,16 +14,19 @@ Critic:
 
 Actor:
   #Learning rate
-  learning_rate: 0.0005
+  learning_rate: 0.7
 
   #Discount Factor
   discount_factor: 0.9
 
   #Eligibility decay
-  eli_decay: 0.99
+  eli_decay: 0.85
 
   #Epsilon
-  epsilon: 0.5
+  epsilon: 1
+
+  #Epsilon decay
+  epsilon_decay: 0.9994 # Recommended for 500 episodes
 
 Environment:
   #Boardsize
@@ -33,18 +36,19 @@ Environment:
   board_type: "Diamond"
 
   #Open cells
-  open_cells: [!!python/tuple [2, 2]]
+  open_cells: [!!python/tuple [2, 1]]
   #Solvable (1,2),(2,1)
   #Not solvable (1,1),(2,2)
-
-  #Track history
-  track_history: True
 
   #Step reward
   step_reward: 1
 
   #Final reward
-  final_reward: 2
+  final_reward: 20
 
   #Loser penalty
   loser_penalty: -5
+
+Training:
+  #Number of training episodes
+  number_of_episodes: 500
