--- a/configs/5_triangle_table.yml
+++ b/configs/5_triangle_table.yml
@@ -1,6 +1,6 @@
-Critic_table:
+Critic:
   #Learning rate
-  learning_rate: 0.01
+  learning_rate: 0.0001
 
   #Discount Factor
   discount_factor: 0.9
@@ -23,10 +23,10 @@ Actor:
   eli_decay: 0.85
 
   #Epsilon
-  epsilon: 0.8
+  epsilon: 1
 
   #Epsilon decay
-  epsilon_decay: 0.999 # Recommended for 500 episodes
+  epsilon_decay: 0.9993423349014151 # Recommended for 500 episodes
 
 Environment:
 
@@ -43,10 +43,10 @@ Environment:
   step_reward: 1
 
   #Final reward
-  final_reward: 50
+  final_reward: 20
 
   #Loser penalty
-  loser_penalty: -100
+  loser_penalty: -5
 
 Training:
   #Number of training episodes
