--- a/configs/4_diamond_nn.yml
+++ b/configs/4_diamond_nn.yml
@@ -1,4 +1,4 @@
-Critic:
+Critic_table:
   #Learning rate
   learning_rate: 0.01
 
@@ -23,13 +23,10 @@ Actor:
   eli_decay: 0.85
 
   #Epsilon
-  epsilon: 0.8
+  epsilon: 1
 
   #Epsilon decay
   epsilon_decay: 0.999 # Recommended for 500 episodes
-
-  #Final epsilon
-  final_epsilon: 0.01
 
 Environment:
 
@@ -40,22 +37,17 @@ Environment:
   board_type: "Triangle"
 
   #Open cells
-  open_cells: [!!python/tuple [2,1]]
+  open_cells: [!!python/tuple [0,0]]
 
   #Step reward
-  step_reward: 1
+  step_reward: 0
 
   #Final reward
-  final_reward: 50
+  final_reward: 1
 
   #Loser penalty
-  loser_penalty: -100
+  loser_penalty: -1
 
 Training:
   #Number of training episodes
-  number_of_episodes: 200
-
-Critic_type:
-  #Boolean vaiable to
-  neural: False
-
+  number_of_episodes: 500
