--- a/configs/4_diamond_nn.yml
+++ b/configs/4_diamond_nn.yml
@@ -37,6 +37,8 @@ Environment:
 
   #Open cells
   open_cells: [!!python/tuple [2, 1]]
+  #Solvable (1,2),(2,1)
+  #Not solvable (1,1),(2,2)
 
   #Step reward
   step_reward: 1
