--- a/configs/default_nn.yml
+++ b/configs/default_nn.yml
@@ -1,6 +1,6 @@
 Critic:
   #Learning rate
-  learning_rate: 0.001
+  learning_rate: 0.0001
 
   #Discount Factor
   discount_factor: 0.9
@@ -10,7 +10,8 @@ Critic:
 
   #Dims (Will be ignored for TableCritic)
   # NOTE: dims[0] MUST equal size**2 if Diamondboard or size(size+1)/2 if Triangle
-  dims: !!python/tuple [25, 4, 3, 1]
+  dims: !!python/tuple [25, 20, 15, 5, 1]
+  #[25,4,3,1]
 
 Actor:
   #Learning rate
@@ -36,7 +37,8 @@ Environment:
   board_type: "Diamond"
 
   #Open cells
-  open_cells: [!!python/tuple [2, 1], !!python/tuple [0, 0]]
+  open_cells: [!!python/tuple [3, 2]]
+  #Works: [2, 1], [0, 0]
 
   #Step reward
   step_reward: 1
@@ -45,11 +47,11 @@ Environment:
   final_reward: 10
 
   #Loser penalty
-  loser_penalty: -20
+  loser_penalty: -30
 
 Training:
   #Number of training episodes
-  number_of_episodes: 5000
+  number_of_episodes: 1000
 
 Critic_type:
   neural: True
