--- a/configs/default_nn.yml
+++ b/configs/default_nn.yml
@@ -10,7 +10,7 @@ Critic:
 
   #Dims (Will be ignored for TableCritic)
   # NOTE: dims[0] MUST equal size**2 if Diamondboard or size(size+1)/2 if Triangle
-  dims: !!python/tuple [25, 20, 5, 1]
+  dims: !!python/tuple [36, 20, 5, 1]
   #[25,4,3,1]
 
 Actor:
@@ -31,14 +31,13 @@ Actor:
 
 Environment:
   #Boardsize
-  boardsize: 5
+  boardsize: 6
 
   #Boardtype
   board_type: "Diamond"
 
   #Open cells
-  open_cells: [!!python/tuple [2, 1]]
-  #Works: [2, 1], [0, 0]
+  open_cells: [!!python/tuple [2, 1], [0, 0]]
 
   #Step reward
   step_reward: 1
